[project]
name = "piledger"
version = "0.1.0"
description = "Révision de concepts de programmation 1"
readme = "README.md"
authors = [
    { name = "Vincent Archambault-Bouffard", email = "varchambaultbouffard@cmaisonneuve.qc.ca" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
piledger = "piledger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
